Adding javadoc